# GameEngine3D

./: .gitignore  .vcpkg.json  CMakeLists.txt  build.bat  build.sh  style.json  vcpkg.json
include/: app.hpp  camera.hpp  ebo.hpp  mesh.hpp  shader.hpp  texture.hpp  vao.hpp  vbo.hpp  window.hpp
shaders/: default.frag  default.vert
src/: app.cpp  camera.cpp  ebo.cpp  main.cpp  mesh.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp  window.cpp
